# instack-undercloud

./: .coveragerc  .gitignore  .gitreview  .testr.conf  Gemfile  Overcloud-packages.md  Overcloud-source.md  Overcloud.md  README-baremetal.md  README-build-images.md  README-packages.md  README-scale.md  README-source.md  README-virt.md  README.md  README.rst  Rakefile  bindep.txt  deploy-baremetal-overcloudrc  deploy-virt-overcloudrc  instack-baremetal.answers.sample  instack-sourcerc  instack-undercloud.spec  instack-virt.answers.sample  instack.answers.sample  lower-constraints.txt  requirements.txt  rhel7rc  setup.cfg  test-requirements.txt  tox.ini  undercloud.conf.sample
HOWTO/: Building-RPMs.md
config-generator/: undercloud.conf
doc/source/: ahc-workflow.rst  baremetal-setup.rst  build-images.rst  conf.py  deploy-overcloud.rst  drac-setup.rst  faq.rst  index.rst  install-undercloud.rst  intro.rst  setup.rst  troubleshooting-overcloud.rst  troubleshooting-virt-setup.rst  vendor-specific.rst  virt-setup.rst
docker/: README-docker-build.md  README.md
docker/instack-virt/: Dockerfile  libvirtd.ini  start.sh
elements/centos-cr/: README.rst
elements/discovery-dhcp/: README.md
elements/discovery-ironic/: README.md
elements/dnsmasq-forwarder/: README.md  dnsmasq-forwarder.service
elements/grub2/: README.rst  package-installs.yaml
elements/grub2-deprecated/: README.rst
elements/instack-vm/: README.md  README.rst  element-deps  package-installs.yaml
elements/install-server/: source-repository-install-server
elements/ipxe/: package-installs.yaml
elements/ironic-discoverd/: README.md  element-deps
elements/ironic-discoverd-ramdisk-instack/: README.md  package-installs.yaml
elements/ironic-inspector/: README.md  element-deps
elements/isolated-build/: README.md
elements/openstack-full/: element-deps  source-repository-install-server
elements/os-cloud-config/: package-installs-os-cloud-config
elements/os-disk-config/: package-installs.yaml  source-repository-os-disk-config
elements/os-refresh-config-reboot/: os-refresh-config-reboot
elements/overcloud-full/: README.rst  (+1 more)
heat-templates/: ironic-deployment-os-net-config.yaml  ironic-deployment.yaml  os-disk-config-deployment.yaml  os-disk-config.yaml  overcloud-resource-registry-puppet-satellite.yaml  resource-registry.yaml
imagefactory/: Makefile  dib_deploy_ramdisk_ironic.tdl  dib_discovery_ramdisk.tdl  dib_overcloud_cinder_volume.tdl  dib_overcloud_compute.tdl  dib_overcloud_control.tdl  dib_overcloud_swift_storage.tdl  input_image.ks  input_image.tdl  utility_image.ks  utility_image.ks.save  utility_image.tdl
instack_undercloud/: __init__.py  undercloud.py  validator.py
jenkins-jobs/: instack-ironic-deployment.yaml
json-files/: .fedora-20-undercloud.json.swo  .fedora-20-undercloud.json.swp  centos-7-undercloud-packages.json  fedora-20-undercloud-delorean.json  fedora-20-undercloud-packages.json  fedora-20-undercloud-source.json  fedora-20-undercloud.json  rhel-7-rhos-6-undercloud-packages.json  rhel-7-undercloud-packages.json  rhel-7-undercloud-source.json
live/: Makefile  instack-install.ks  instack-livecd.ks  instack-source-livecd.ks
rel-eng/: tito.props
scripts/: .deploy-overcloud.swp  .install-undercloud.swp  deploy-overcloud  deploy-overcloud-tuskarcli  instack-apply-config  instack-build-images  instack-create-overcloudrc  instack-delete-overcloud  instack-delete-overcloud-tuskarcli  instack-deploy-overcloud  instack-deploy-overcloud-tuskarcli  instack-haproxy-cert-update  instack-install-dependencies  instack-install-undercloud  instack-install-undercloud-packages  instack-install-undercloud-source  instack-ironic-deployment  instack-pre-upgrade-undercloud  instack-prepare-discovery  instack-prepare-for-overcloud  instack-setup-delorean  instack-setup-host  instack-setup-host-rhel7  instack-tempest-test-overcloud  instack-test-overcloud  instack-update-overcloud  instack-upgrade-undercloud  instack-virt-setup  install-undercloud  install-undercloud-packages  overcloud  prepare-for-overcloud  test-overcloud  tripleo
templates/: config.json.template  net-config.json.template
zuul.d/: layout.yaml  project.yaml
(+357 files in other folders)
