[metadata]
name = instack-undercloud
summary = instack-undercloud
description-file =
    README.md
author = James Slagle
author-email = jslagle@redhat.com
home-page = http://www.redhat.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
scripts =
    scripts/instack-build-images
    scripts/instack-create-overcloudrc
    scripts/instack-deploy-overcloud
    scripts/instack-install-undercloud
    scripts/instack-ironic-deployment
    scripts/instack-prepare-for-overcloud
    scripts/instack-tempest-test-overcloud
    scripts/instack-test-overcloud
    scripts/instack-virt-setup

data_files =
    share/instack-undercloud/ = elements/*
    share/instack-undercloud/heat-templates = heat-templates/*
    share/instack-undercloud/json-files = json-files/*
    share/instack-undercloud/jenkins-jobs = jenkins-jobs/*
    share/instack-undercloud/ = instack.answers.sample
    share/instack-undercloud/ = deploy-baremetal-overcloudrc
