[metadata]
name = instack-undercloud
summary = instack-undercloud
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/instack-undercloud
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    instack_undercloud

scripts =
    scripts/instack-install-undercloud
    scripts/instack-virt-setup
    scripts/instack-haproxy-cert-update

data_files =
    share/instack-undercloud/ = elements/*
    share/instack-undercloud/json-files = json-files/*
    share/instack-undercloud/ = undercloud.conf.sample
    share/instack-undercloud/templates = templates/*

[entry_points]
oslo.config.opts =
    instack-undercloud = instack_undercloud.undercloud:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
